--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Queso</li>
         <li>Harina</li>
     </ul>
-    <h4>Mi primera imagen</h4>
+    <h4>Mi primera imagen lol</h4>
     <img src="gato.png" width="400px">
     <hr>
     <video src="GG.mp4" controls width="400px"></video>
