--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
         <li>Harina</li>
     </ul>
     <h4>Mi primera imagen lol</h4>
-    <img src="gato.png" width="400px">
+    <img src="Herramientas/gato.png" width="400px">
     <hr>
-    <video src="GG.mp4" controls width="400px"></video>
+    <video src="Herramientas/GG.mp4" controls width="400px"></video>
     <hr>
-    <audio src="GG.mp4" controls></audio>
-    
+    <audio src="Herramientas/GG.mp4" controls></audio>
+    <form method="post">
+        <input type="text" required=""> 
+        <input type="email" required=""> 
+        <input type="password" required=""> 
+        <input type="date" required=""><br>
+        <input type="button" value="Boton"><br>
+        <input type="submit"><br>
+    </form>
 
 </body>
 
